--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -19,41 +19,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup GHC with Stack
+        uses: haskell/actions/setup@v2
         with:
           ghc-version: "9.0.2"
-          cabal-version: "3.6.2"
+          enable-stack: true
+          stack-version: "3.6.2"
 
-      - name: Cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-cabal
+      - name: Cache ~/.stack
+        uses: actions/cache@v3
         with:
-          path: ~/.cabal
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          path: ~/.stack
+          key: ${{ runner.os }}-stack-global-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
+          restore-keys: ${{ runner.os }}-stack-global-
+
+      - name: Cache .stack-work
+        uses: actions/cache@v3
+        with:
+          path: .stack-work
+          key: ${{ runner.os }}-stack-work-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}-${{ hashFiles('**/*.hs') }}
+          restore-keys: ${{ runner.os }}-stack-work-
+
+      - name: Setup hlint
+        uses: haskell/actions/hlint-setup@v2
 
       - name: Run hlint
-        uses: "domdere/haskell-lint-action@master"
-        if: ${{ github.ref == 'refs/heads/develop' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: haskell/actions/hlint-run@v2
+        with:
+          path: taffybar.hs
+          fail-on: warning
 
       - name: Install system dependencies
-        run: sudo apt-get install libxrandr-dev libxss-dev
+        run: >
+          sudo apt-get install libgirepository1.0-dev libwebkit2gtk-4.0-dev libgtksourceview-3.0-dev
+          libdbusmenu-gtk3-dev libgirepository1.0-dev
 
       - name: Install dependencies
         run: |
-          cabal update
-          cabal build --only-dependencies -j4
+          stack update
+          stack build --only-dependencies
 
       - name: Build
-        run: cabal build --enable-tests -j4 all
+        run: stack build
 
       - name: Run tests
-        if: ${{ github.ref == 'refs/heads/develop' }}
-        run: cabal test all
+        run: stack test
