--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: true
+
       - name: Setup GHC with Stack
         uses: haskell/actions/setup@v2
         with:
