--- a/.github/workflows/hlint.yml
+++ b/.github/workflows/hlint.yml
@@ -1,4 +1,4 @@
-name: Haskell CI
+name: Build
 
 on:
   push:
@@ -52,19 +52,3 @@ jobs:
         with:
           path: taffybar.hs
           fail-on: warning
-
-      - name: Install system dependencies
-        run: >
-          sudo apt-get install libgirepository1.0-dev libwebkit2gtk-4.0-dev libgtksourceview-3.0-dev
-          libdbusmenu-gtk3-dev libgirepository1.0-dev
-
-      - name: Install dependencies
-        run: |
-          stack update
-          stack build --only-dependencies
-
-      - name: Build
-        run: stack build
-
-      - name: Run tests
-        run: stack test
