--- a/.github/workflows/hlint.yml
+++ b/.github/workflows/hlint.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Lint
 
 on:
   push:
@@ -23,26 +23,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Setup GHC with Stack
-        uses: haskell/actions/setup@v2
-        with:
-          ghc-version: "9.0.2"
-          enable-stack: true
-
-      - name: Cache ~/.stack
-        uses: actions/cache@v3
-        with:
-          path: ~/.stack
-          key: ${{ runner.os }}-stack-global-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
-          restore-keys: ${{ runner.os }}-stack-global-
-
-      - name: Cache .stack-work
-        uses: actions/cache@v3
-        with:
-          path: .stack-work
-          key: ${{ runner.os }}-stack-work-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}-${{ hashFiles('**/*.hs') }}
-          restore-keys: ${{ runner.os }}-stack-work-
 
       - name: Setup hlint
         uses: haskell/actions/hlint-setup@v2
