--- a/stack.yaml
+++ b/stack.yaml
@@ -21,7 +21,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-19.25
+resolver: lts-20.1
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -49,10 +49,10 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
-
+extra-deps:
+- rate-limit-1.4.2@sha256:78b935d96fe82b4d059908557e2c904925e99fcd465e2b4dfd65b8d2930163a2,930
 # Override default flag values for local packages and extra-deps
-# flags: {}
+flags: {}
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
@@ -74,3 +74,6 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+allow-newer: true
+ghc-options:
+  "$targets":  -fno-warn-incomplete-record-updates
