--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,10 +45,9 @@ jobs:
           restore-keys: ${{ runner.os }}-stack-work-
 
       - name: Install system dependencies
-        run: >
+        run: |
           sudo apt-get update
-          sudo apt-get install libgirepository1.0-dev libwebkit2gtk-4.0-dev libgtksourceview-3.0-dev
-          libdbusmenu-gtk3-dev libxss-dev
+          sudo apt-get install libgirepository1.0-dev libwebkit2gtk-4.0-dev libgtksourceview-3.0-dev libdbusmenu-gtk3-dev libxss-dev
 
       - name: Install dependencies
         run: |
