--- a/my-taffybar.cabal
+++ b/my-taffybar.cabal
@@ -23,7 +23,7 @@ maintainer:         lebensterben@users.noreply.github.com
 
 executable my-taffybar
     main-is:          taffybar.hs
-    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
+    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wno-incomplete-record-updates
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
