--- a/stack.yaml
+++ b/stack.yaml
@@ -21,7 +21,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-20.6
+resolver: nightly-2023-01-11
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -74,6 +74,6 @@ flags: {}
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-allow-newer: true
-ghc-options:
-  "$targets":  -fno-warn-incomplete-record-updates
+# allow-newer: true
+# ghc-options:
+  # "$targets":  -fno-warn-incomplete-record-updates
